# embassy-nix-template

./: Cargo.toml  README.md  cargo-generate.toml  commands.gdb  pre-script.rhai
.cargo/: config.toml
src/: main.rs
