[package]
edition = "2021"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
resolver = "2"

[dependencies]
defmt = "0.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "integrated-timers"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

{% if chip contains "stm32" -%}
embassy-stm32 = { version = "0.1.0", features = ["defmt", "{{ chip }}", "unstable-pac", "memory-x", "time-driver-any" ]  }
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
[features]
{{chip}} = ["embassy-executor/arch-cortex-m", "embassy-executor/executor-thread", "embassy-executor/defmt", "embassy-executor/executor-interrupt" ]
default = ["{{chip}}"]
{% endif -%}

{% if chip contains "esp32" -%}
esp-hal = { version = "0.17.0", features = ["log"] }
esp-backtrace = { version = "0.11.1", features = ["exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.9.1", features = ["log", "defmt-espflash"]}

[features]
{{chip}}= ["esp-hal/{{chip}}", "esp-backtrace/{{chip}}", "esp-println/{{chip}}"]
async = ["esp-hal/async"]
embassy = ["esp-hal/embassy"]
embassy-executor-thread    = ["esp-hal/embassy-executor-thread"]
embassy-time-timg0 = ["esp-hal/embassy-time-timg0"]
default = ["{{chip}}", "async", "embassy", "embassy-executor-thread", "embassy-time-timg0"]
{% endif -%}

